--- a/JGP.NoteMaster.Site/JGP.NoteMaster.Site.csproj
+++ b/JGP.NoteMaster.Site/JGP.NoteMaster.Site.csproj
@@ -4,4 +4,18 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Application\Configuration\" />
+    <Folder Include="Application\Helpers\" />
+    <Folder Include="Application\Middleware\" />
+    <Folder Include="Areas\Standard\Controllers\" />
+    <Folder Include="Areas\Standard\Models\" />
+    <Folder Include="Areas\Standard\Views\Home\" />
+    <Folder Include="Areas\Standard\Views\Shared\" />
+    <Folder Include="Controllers\" />
+    <Folder Include="Models\" />
+    <Folder Include="Views\Home\" />
+    <Folder Include="Views\Shared\" />
+  </ItemGroup>
+
 </Project>
