--- a/JGP.NoteMaster.Site/appsettings.json
+++ b/JGP.NoteMaster.Site/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "ApiEndpoint": "https://localhost:44366"
+  }
 }
